@@ -1,0 +1,7 @@
+global:
+      var2: newval2
+tests:
+    - name: testName
+      vars:
+        var3: newval3
+        var6: $var2
