@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-# Copyright (C) 2007-2011 José Antonio Calvo Fernández <jacalvo@zentyal.com>
+# Copyright (C) 2007-2014 José Antonio Calvo Fernández <jacalvo@zentyal.com>
 # Copyright (C) 2013 Rubén Durán Balda <rduran@zentyal.com>
 #
 # This program is free software; you can redistribute it and/or modify
@@ -53,6 +53,7 @@ my $out = '';
 my $path = '';
 my $video = '';
 my $format = '';
+my $varfile = '';
 my $wait = 0;
 my $waitFail = 0;
 my $noDestroy = 0;
@@ -72,6 +73,7 @@ GetOptions('createimg' => \$create,
            'out=s' => \$out,
            'video' => \$video,
            'format=s' => \$format,
+           'vars=s' => \$varfile,
            'quiet' => \$quiet,
            'wait' => \$wait,
            'wait-fail' => \$waitFail,
@@ -359,7 +361,7 @@ sub destroy # (file)
     $deployer->destroy();
 }
 
-sub test # (file)
+sub test
 {
     my ($file) = @_;
 
@@ -369,6 +371,9 @@ sub test # (file)
         if (ANSTE::Validate::suite($file)) {
             my $suite = new ANSTE::Test::Suite;
             $suite->loadFromDir($file);
+            if ($varfile) {
+                $suite->replaceVars($varfile);
+            }
             $runner->runSuite($suite);
         } else {
             $runner->runDir($file);
@@ -430,10 +435,12 @@ anste [options] [file ...] [var1=value1 var2=value2 ...]
    -format <fmt>      select the output format for the reports
    -wait              wait before shutting down once the test is completed
    -wait-fail         wait if a test fails
+   -nodestroy         keep scenario running after tests have finished
    -step              run tests step by step, waiting after each one
    -break <t1,t2,...> set breakpoints after the given test names
    -quiet             do not show output of commands
    -reuse             reuse the created image if exists (with -create)
                       reuse a deployed scenario (with -test)
+   -vars <file>       override suite variables with the given YAML file
 
 =cut
